fix: fixed scrolls visibility

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
     --box-shadow: 0px 4px 24px 0px rgba(168,168,168,0.25);
     --task-card-background: linear-gradient(112.83deg, rgba(228, 240, 248, 0.42) 0%, rgba(255, 255, 255, 0.336) 110.84%);
 
-    --logo-height: 100%;
+    --logo-height: 101%;
 }
 
 * ::-webkit-scrollbar {
